# mini_crm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ADMIN_CLI.md  BUSINESS_ENTITIES_ANALYSIS.md  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  env.example.txt  gunicorn_conf.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml
alembic/: env.py
alembic/versions/: 15b77311e587_add_stage_changed_and_is_active.py  a1b2c3d4e5f6_add_analytics_indexes_to_deals.py  e2fd95a35d8b_initial_migration.py
nginx/: Dockerfile  nginx.conf
nginx/conf.d/: crm-backend.conf
src/: main.py
src/api/dependencies/: auth.py  organization.py  pagination.py  permissions.py
src/api/v1/: activities.py  analytics.py  auth.py  deals.py  (+3 more)
src/core/: cache.py  config.py  database.py  exceptions.py  init_admin.py  redis.py  security.py
src/models/: __init__.py  activity.py  contact.py  deal.py  organization.py  organization_member.py  task.py  types.py  user.py
src/repositories/: activity_repository.py  base.py  contact_repository.py  deal_repository.py  organization_repository.py  task_repository.py  user_repository.py
src/schemas/: __init__.py  activity.py  analytics.py  contact.py  deal.py  organization.py  task.py  user.py
src/scripts/: __init__.py  cli.py
src/services/: activity_service.py  auth_service.py  contact_service.py  deal_service.py  organization_service.py  task_service.py
tests/: README.md  conftest.py  test_business_logic_contacts.py  test_business_logic_deals.py  test_business_logic_permissions.py  test_business_logic_tasks.py  test_cache.py  test_integration_api.py  test_pagination.py
