[project]
name = "mini-crm"
version = "0.1.0"
description = "Mini CRM application"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "backoff>=2.2.1",
    "bcrypt>=4.2.0",
    "email-validator>=2.2.0",
    "fastapi>=0.123.0",
    "gunicorn>=23.0.0",
    "orjson>=3.11.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.1",
    "aiosqlite>=0.20.0",
    "greenlet>=3.1.1",
    "ruff>=0.14.7",
    "mypy>=1.15.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N818"]  # Allow exception names without Error suffix (e.g., CRMException)
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --asyncio-mode=auto"
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]
